# src/controllers/posts.controller.ts
@@ -7,6 +7,7 @@ import {
   SuccessResponse,
   Post,
   Path,
+  Query,
 } from "tsoa";
 import { PostsService } from "../services/posts.service";
 // import { PostSchema } from "../models/model.post";
@@ -15,16 +16,27 @@ import { PostsService } from "../services/posts.service";
 export class PostsController extends Controller {
   private __PostsService = new PostsService();
 
-  @Get("{postId}")
+  @Get()
+  public getAllPosts() {
+    this.setStatus(200);
+    return this.__PostsService.getAllPosts();
+  }
+
+  @Get("/getPostById/{postId}")
   public getPost(@Path() postId: number) {
     this.setStatus(200);
     return this.__PostsService.get(postId);
   }
 
-  @Get()
-  public getAllPosts() {
+  @Get("/paginate")
+  public viewPosts(
+    @Query() limit: number,
+    @Query() pageParam: number,
+    @Query() subredditName?: string
+  ) {
+    console.log(limit, pageParam, subredditName);
     this.setStatus(200);
-    return this.__PostsService.getAllPosts();
+    return "up and running";
   }
 
   @Post("/create")
